Removed the dependency on drupalSettings. This should make the style plugin work with ajax views. Fixed state order.

--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,8 @@
     "issues": "https://www.drupal.org/project/issues/moderation_state_columns",
     "source": "http://cgit.drupalcode.org/moderation_state_columns"
   },
-  "require": { }
+  "require": {
+    "drupal/webpack_react": "*",
+    "ext-json": "*"
+  }
 }
